--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,36 @@ services:
       interval: 5s
       timeout: 3s
       retries: 5
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: ai-agent-prometheus
+    volumes:
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    restart: unless-stopped
+    depends_on:
+      - agent
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: ai-agent-grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_USER=admin
+    volumes:
+      # - ./monitoring/dashboards:/etc/grafana/provisioning/dashboards
+      # - ./monitoring/grafana-dashboard-config.yml:/etc/grafana/provisioning/dashboards/dashboards.yml
+      # - ./monitoring/grafana-datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
+
+      - ./monitoring/dashboards:/etc/grafana/provisioning/dashboards
+      - ./monitoring/grafana-dashboard-config.yml:/etc/grafana/provisioning/dashboards/config.yml
+      - ./monitoring/grafana-datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
+    restart: unless-stopped
+    depends_on:
+      - prometheus
