--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ iniconfig==2.3.0
 jiter==0.12.0
 packaging==25.0
 pluggy==1.6.0
+prometheus-client==0.23.1
 pydantic==2.12.4
 pydantic_core==2.41.5
 Pygments==2.19.2
